# poetry2nix-numpy-test

./: default.nix  pyproject.toml
nix/: sources.json
tests/: test_minimaltest.py
