[tool.poetry]
name = "minimaltest"
version = "0.1.0"
description = ""
authors = ["Philipp Middendorf <philipp.middendorf@desy.de>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.22.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
